# ntc

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NTCRANFILE.toml  README.md  build.rs  install.bat  install.ps1  install.sh  installer.iss  ntconfig.toml  push.txt  use.txt
.github/workflows/: apt-repo.yml  release.yml
debian/: changelog  control  copyright  rules
packaging/npm/: package.json
packaging/npm/scripts/: install.js
packaging/termux/: build.sh
packaging/winget/: NuengCoder.ntc.installer.yaml  NuengCoder.ntc.locale.en-US.yaml  NuengCoder.ntc.yaml
src/: backup.rs  backup_diff.rs  backup_manifest.rs  cli.rs  config.rs  explorer.rs  filetype.rs  lib.rs  main.rs  navigator.rs  nvim.rs  output.rs  report.rs  search.rs  shell.rs  teleport.rs  watcher.rs
src/cli/: helpers.rs  mod.rs  run.rs
src/cli/completions/: ntc.bash  ntc.fish  ntc.ps1  ntc.zsh
src/editor/: completion.rs  core.rs  edit.rs  editor_config.rs  helpers.rs  mod.rs  modes.rs  mouse.rs  recovery.rs  render.rs  run.rs  template.rs  types.rs  unicode.rs
src/game/: mod.rs
src/lsp/: mod.rs
src/math/: ast.rs  builtins.rs  check.rs  eval.rs  function.rs  mod.rs  token.rs
src/ranfile/: mod.rs  parser.rs  runner.rs  types.rs
src/report/: docx.rs  html.rs  json.rs  md.rs  mod.rs  pdf.rs  txt.rs  xlsx.rs
src/report/html_template/: template.html
src/shell/: alias.rs  commands.rs  entry.rs  help.rs  helpers.rs  hinter.rs  mod.rs
src/shell/commands/: alias_commands.rs  backup.rs  config_commands.rs  ignore.rs  misc.rs  mod.rs  nav.rs  ran_commands.rs  report.rs
src/syntax/: highlighter.rs  language.rs  mod.rs  types.rs
src/tutorial/: engine.rs  mod.rs  render.rs  steps.rs
src/utils/: backup.rs  backup_diff.rs  backup_manifest.rs  config.rs  explorer.rs  filetype.rs  fuzzy.rs  mod.rs  navigator.rs  output.rs  search.rs  session.rs  teleport.rs  theme.rs  watcher.rs
