[package]
name = "ntc"
version = "2.2.0"
edition = "2021"
description = "Navigate, Toolkit, Center - A Combine of Navigation , Project Toolkit Center hub"
authors = ["NuengCoder"]
license = "MIT"

[[bin]]
name = "ntc"
path = "src/main.rs"

[lib]
name = "ntc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rustyline = "15.0"
anyhow = "1.0"
chrono = "0.4"
dirs = "6.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
colored = "2"
rayon = "1.10"
notify = "7"
ctrlc = "3.4"
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
libc = "0.2"
crossterm = "0.28"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.4"
printpdf = "0.5"
docx-rs = "0.4"
rust_xlsxwriter = "0.95"

# Android/Termux specific
[target.'cfg(target_os = "android")'.dependencies]
# No arboard, printpdf, docx-rs, rust_xlsxwriter on Android

[dev-dependencies]
tempfile = "3.15"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "Nueng <thilaphonneung@gmail.com>"
copyright = "2026, Nueng"
license-file = ["LICENSE", "3"]
extended-description = """\
ntc is a  Combine of Navigation , Project Toolkit Center hub.
It helps navigate, visualize, and report on directory structures."""
depends = "$auto"  # Automatically detects if you need libc, etc.